is usually easy to make Marginalia work with older or newer releases of
Moodle.

I used to maintain separate stand-alone annotation code, but as it was not a
complete working application it didn't get used much. I no longer maintain that
version, but some older release notes refer to it. Most bug fixes and 
enhancements for the stand-alone version apply to the subsequent Moodle 
version release.

2017-01-29

Add annotation support to quiz essay questions. Only users with grading
permissions can annotate. Names of annotating users are only visible to others
with grading permissions. Release is for Moodle version 3.1.


2015-09-07

Add annotations to simple single-discussion forums, and to user pages that list
posts by a given user.

Move to GitHub.


2015-04-06

Smartquote isn't working. Turn it off for now.


2014-09-27

Update to work with Moodle 2.7.


2013-06-14

Update to work with Moodle 2.5.

Removed YUI code, which includes autocomplete for margin notes.


2013-03-08

Branch Moodle version, as some improvements in others are buggy.


2011-05 (Moodle)
  This is a major release, focusing on three areas:  Moodle 2.0 integration,
  a minimized patch footprint, and a streamlined user interface.  It was
  delayed chiefly because of a lack of resources for testing (on different
  browsers and for upgrades from previous versions).
  
  * This release works with and requires Moodle 2.  I will no longer be adding
    features for Moodle 1.9.
  * The patch footprint is dramatically smaller.  It doesn't touch anything
    outside mod/forum.
  * The create annotation button in the margin has been eliminated.  Clicking
    on a blank space in the margin performs the create annotation function now.
  * The public/private button has been replaced by a drop-down sheet menu at
    the top of the page.  This makes many things possible in the future.  It
    also establishes the principle that if you and I are looking at the same