@@ -1,4 +1,4 @@
 <?php
-    $plugin->version = 2017020700;
+    $plugin->version = 2017032400;
     $plugin->requires = 2014111003;
 	$plugin->component = 'block_marginalia';
